<resources>
    <string name="app_name">VectAlignSamples</string>
    <string name="menu_github">VectAlign on github</string>
    <string name="help">Tap on the image to start the morphing or select another animation from the menu.</string>
    <string name="menu_icons">Morph icons (stroke)</string>
    <string name="menu_droid_to_apple">Morph droid to apple (stroke)</string>
    <string name="menu_cart_to_droid">Morph cart to droid (stroke)</string>
    <string name="menu_wifi_to_retweet">Morph wifi to retweet (stroke)</string>
    <string name="menu_heart_to_twitter">Morph heart (stroke+fill)</string>
    <string name="svg_icon_a_path">M 398.14,50.5 c 0.0,0.0,0.0,0.0,0.0,0.0 H 117.98 c -36.408,0.0,-68.48,26.452,-68.48,62.86 v 280.16 c 0.0,36.408,32.072,68.98,68.48,68.98 h 173.466 c 0.0,0.0,0.0,0.0,0.0,0.0 V 462.50003 L 291.446,462.50003 M 291.446,462.50003 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c -0.325,-54.0,0.077,-114.134,-0.185,-166.387 c -11.064,-0.112,-22.138,-0.684,-33.202,-0.854 c 0.041,-18.467,0.017,-37.317,0.024,-55.781 c 11.057,-0.137,22.121,-0.163,33.178,-0.268 c 0.338,-17.957,-0.338,-36.025,0.354,-53.966 c 1.103,-14.205,6.519,-28.563,17.14,-38.377 c 12.859,-12.239,31.142,-16.397,48.387,-16.912 c 18.233,-0.163,36.468,-0.076,54.71,-0.068 c 0.072,19.24,0.072,38.482,-0.008,57.722 c -11.789,-0.02,-23.585,0.023,-35.374,-0.025 c -7.468,-0.467,-15.145,5.198,-16.504,12.609 c -0.177,12.875,-0.064,25.757,-0.057,38.628 c 17.285,0.073,34.577,-0.02,51.862,0.044 c -1.264,18.629,-3.581,37.168,-6.285,55.637 c -15.272,0.137,-30.554,1.514,-45.818,1.602 c -0.129,52.236,0.04,112.395,-0.093,166.395 h 38.564 c 36.408,0.0,63.36,-32.572,63.36,-68.98 V 113.36 C 461.5,76.952,434.548,50.5,398.14,50.5 L 398.14,50.5</string>
    <string name="svg_icon_b_path">M 461.5,115.92 c 0.0,-36.406,-29.012,-65.42,-65.42,-65.42 H 115.92 c -36.406,0.0,-66.42,29.014,-66.42,65.42 v 280.16 c 0.0,36.408,30.014,66.42,66.42,66.42 h 280.16 c 36.408,0.0,65.42,-30.012,65.42,-66.42 V 115.92 L 461.5,115.92 M 375.601,259.621 c -5.58,22.825,-18.866,43.3,-36.099,59.08 c -33.535,30.361,-79.981,44.914,-124.859,42.025 c -43.143,-2.636,-85.599,-23.899,-111.083,-59.182 c 2.229,1.3,4.098,3.099,6.226,4.543 c 19.731,14.275,46.0,18.813,69.459,12.44 c 14.235,-3.674,27.162,-11.636,37.486,-22.036 c -6.606,0.446,-13.938,-0.729,-18.725,-5.705 c -2.985,-2.845,-4.217,-7.521,-2.422,-11.33 c 2.173,-4.809,7.001,-7.544,11.563,-9.697 c -14.971,2.141,-31.286,-4.836,-38.187,-18.677 c 5.058,-6.035,13.141,-7.966,20.65,-8.558 c -8.739,-2.547,-17.713,-5.665,-24.338,-12.187 c -5.267,-4.937,-8.69,-11.785,-9.716,-18.918 c 6.186,-1.151,12.396,-2.559,18.737,-2.293 c -14.375,-7.483,-27.516,-21.73,-26.37,-38.957 c 27.263,9.946,54.085,21.286,79.698,34.982 c 8.96,4.92,16.412,12.046,23.735,19.071 c 7.097,-18.428,14.713,-36.927,26.257,-53.093 c 6.188,-8.504,13.486,-16.418,22.45,-22.021 c -0.35,2.786,-1.778,5.218,-3.102,7.634 c 6.694,-5.051,14.448,-8.96,22.865,-9.946 c -1.167,5.031,-5.938,7.665,-10.1,9.952 c 6.281,-1.857,12.404,-4.597,19.027,-5.049 c 1.763,-0.063,4.285,0.012,4.912,2.066 c 0.95,2.559,-1.641,4.544,-3.604,5.61 c -7.222,3.728,-15.575,4.275,-22.922,7.719 c 15.101,-1.418,30.176,4.436,41.627,14.098 c 13.667,11.251,22.7,27.539,25.995,44.859 c 12.083,3.247,25.143,0.897,36.48,-3.923 c -5.701,12.911,-20.218,18.806,-33.479,19.956 h 0.0 c 11.02,4.16,23.146,4.868,34.794,3.633 V 245.71698 C 403.323,255.952,389.035,259.934,375.601,259.621 L 375.601,259.621</string>
    <string name="svg_droid_for_apple">M 144.0,268.4 V 358.0 c 0.0,6.9,4.5,14.0,11.4,14.0 H 184.0 v 52.0 c 0.0,13.3,10.7,24.0,24.0,24.0 s 24.0,-10.7,24.0,-24.0 v -52.0 h 49.0 v 52.0 c 0.0,7.5,3.4,14.2,8.8,18.6 c 3.9,3.4,9.1,5.4,14.7,5.4 c 0.1,0.0,0.2,0.0,0.3,0.0 c 0.1,0.0,0.1,0.0,0.2,0.0 c 13.3,0.0,24.0,-10.7,24.0,-24.0 v -52.0 h 27.6 c 7.0,0.0,11.4,-7.1,11.4,-13.9 v -89.6 V 192.0 H 144.0 V 268.4 L 144.0,268.4 M 408.0,176.0 c -13.3,0.0,-24.0,10.7,-24.0,24.0 v 96.0 c 0.0,13.3,10.7,24.0,24.0,24.0 s 24.0,-10.7,24.0,-24.0 v -96.0 C 432.0,186.7,421.3,176.0,408.0,176.0 L 408.0,176.0 M 104.0,176.0 c -13.3,0.0,-24.0,10.7,-24.0,24.0 v 96.0 c 0.0,13.3,10.7,24.0,24.0,24.0 s 24.0,-10.7,24.0,-24.0 v -96.0 C 128.0,186.7,117.3,176.0,104.0,176.0 L 104.0,176.0 M 311.2,89.1 l 18.5,-21.9 c 0.4,-0.5,-0.2,-1.6,-1.3,-2.5 c -1.1,-0.8,-2.4,-1.0,-2.7,-0.4 l -19.2,22.8 c -13.6,-5.4,-30.2,-8.8,-50.6,-8.8 c -20.5,-0.1,-37.2,3.2,-50.8,8.5 l -19.0,-22.4 c -0.4,-0.5,-1.6,-0.4,-2.7,0.4 c -1.1,0.8,-1.7,1.8,-1.3,2.5 l 18.3,21.6 c -48.2,20.9,-55.4,72.2,-56.4,87.2 h 223.6 C 366.7,161.0,359.6,110.4,311.2,89.1 L 311.2,89.1 M 206.8,138.9 c -7.4,0.0,-13.5,-6.0,-13.5,-13.3 c 0.0,-7.3,6.0,-13.3,13.5,-13.3 c 7.4,0.0,13.5,6.0,13.5,13.3 C 220.3,132.9,214.3,138.9,206.8,138.9 L 206.8,138.9 M 305.2,138.9 c 0.0,0.0,0.0,0.0,0.0,0.0 c -7.4,0.0,-13.5,-6.0,-13.5,-13.3 c 0.0,-7.3,6.0,-13.3,13.5,-13.3 c 7.4,0.0,13.5,6.0,13.5,13.3 C 318.7,132.9,312.6,138.9,305.2,138.9 L 305.2,138.9</string>
    <string name="svg_apple">M 333.6,153.9 V 153.9 c 0.0,0.0,0.0,0.0,0.0,0.0 H 333.6 v 0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 s 0.0,0.0,0.0,0.0 v 0.0 h 0.0 v 0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c -33.6,0.0,-47.8,16.5,-71.2,16.5 v 0.0 h 0.0 c -24.0,0.0,-42.3,-16.4,-71.4,-16.4 v 0.0 V 154.0 H 191.00003 V 154.0 L 191.00003,154.0 M 191.00003,154.0 c -28.5,0.0,-58.9,17.9,-78.2,48.4 v 0.0 c -27.1,43.0,-22.5,124.0,21.4,193.0 s 0.0,0.0,0.0,0.0 v 0.0 C 134.20003,395.4,134.20003,395.4,134.20003,395.4 L 134.20003,395.4 M 134.20003,395.4 c 15.7,24.7,36.7,52.4,64.2,52.7 v 0.0 c 0.2,0.0,0.3,0.0,0.5,0.0 s 0.0,0.0,0.0,0.0 v 0.0 C 198.90002,448.1,198.90002,448.1,198.90002,448.1 L 198.90002,448.1 M 198.90002,448.1 l 0.0,0.0 c 23.9,0.0,31.0,-16.1,63.9,-16.3 c 0.2,0.0,0.3,0.0,0.5,0.0 l 0.0,0.0 c 32.4,0.0,38.9,16.2,62.7,16.2 c 0.2,0.0,0.3,0.0,0.5,0.0 l 0.0,0.0 c 27.5,-0.3,49.6,-31.0,65.3,-55.6 c 11.3,-17.7,15.5,-26.6,24.2,-46.6 l 0.0,0.0 c -63.5,-24.8,-73.7,-117.4,-10.9,-152.9 h 0.0 C 385.9,168.2,359.0,153.9,333.6,153.9 L 333.6,153.9 M 333.6,153.9 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 C 333.6,153.9,333.6,153.9,333.6,153.9 L 333.6,153.9 M 326.2,64.0 c -20.0,1.4,-43.3,14.5,-57.0,31.6 c -12.4,15.5,-22.6,38.5,-18.6,60.8 c 0.5,0.0,1.0,0.0,1.6,0.0 c 21.3,0.0,43.1,-13.2,55.8,-30.1 C 320.3,110.2,329.6,87.4,326.2,64.0 L 326.2,64.0</string>
    <string name="svg_wifi">M 233.503,70.369 c 93.726,-6.75,189.622,28.317,256.515,94.363 c 8.765,9.023,7.622,24.807,-1.625,33.076 c -8.493,10.012,-25.501,10.189,-34.266,0.436 c -57.224,-55.091,-138.018,-84.881,-217.35,-78.956 c -65.905,4.24,-129.749,32.628,-177.572,78.096 c -4.253,4.347,-9.684,7.916,-15.938,8.222 c -15.666,1.837,-30.154,-14.536,-26.773,-29.86 c 0.954,-5.501,4.487,-10.083,8.527,-13.747 C 81.009,108.392,156.172,75.469,233.503,70.369 L 233.503,70.369 M 231.183,162.282 c 71.806,-7.81,146.369,18.658,197.183,69.968 c 7.939,9.07,6.95,23.901,-1.872,32.052 c -8.046,9.847,-24.265,10.953,-33.383,2.024 c -32.534,-32.074,-76.518,-52.44,-122.126,-55.774 c -55.387,-4.594,-111.974,16.42,-151.411,55.445 c -9.094,9.612,-26.033,8.518,-34.218,-1.708 c -8.823,-8.327,-9.553,-23.559,-1.084,-32.381 C 123.356,192.802,176.209,167.924,231.183,162.282 L 231.183,162.282 M 241.796,252.97 c 45.314,-4.499,92.161,12.852,123.693,45.669 c 8.634,8.987,7.634,24.454,-1.461,32.77 c -8.257,9.966,-24.807,10.638,-33.782,1.296 c -17.774,-18.245,-42.394,-29.778,-67.884,-31.168 c -28.929,-2.062,-58.201,9.365,-78.744,29.695 c -5.053,5.679,-12.557,9.165,-20.237,8.259 c -17.833,-1.25,-30.213,-25.056,-17.928,-39.344 C 170.26,273.243,205.492,256.575,241.796,252.97 L 241.796,252.97 M 248.781,337.651 c 29.201,-4.9,58.837,19.213,59.78,48.824 c 2.709,29.036,-22.923,56.589,-52.063,55.951 c -26.197,0.908,-50.475,-20.825,-52.772,-46.88 C 199.991,368.194,221.382,340.808,248.781,337.651 L 248.781,337.651</string>
    <string name="svg_retweet">M 175.292,123.158 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 55.974,-0.059,182.935,-0.039,238.896,-0.009 c 9.062,-0.385,17.491,7.286,17.521,16.426 c 0.158,46.409,-0.01,92.828,0.079,139.236 C 431.788,278.81097,431.788,278.81097,431.788,278.81097 L 431.788,278.81097 M 431.788,278.81097 c 24.737,0.089,49.475,-0.02,74.212,0.06 c -32.91,36.401,-66.107,72.547,-99.176,108.8 c -1.519,2.8,-3.354,0.049,-4.753,-1.341 c -32.438,-35.948,-65.467,-71.363,-97.796,-107.4 c 24.658,-0.216,49.307,0.0,73.966,-0.108 c 0.246,-34.045,0.216,-68.1,0.009,-102.135 c -26.64,-0.108,-124.279,0.01,-150.919,-0.059 C 210.147,158.653,192.389,141.221,175.292,123.158 L 175.292,123.158 M 105.197,124.354 c 1.716,-3.026,3.697,0.483,5.236,1.864 c 32.339,35.711,65.181,70.979,97.303,106.877 c -24.708,0.247,-49.416,-0.06,-74.124,0.148 c -0.098,33.995,-0.049,67.991,-0.019,101.986 c 26.709,0.237,127.365,-0.03,154.084,0.138 c 17.195,17.935,34.933,35.356,51.95,53.459 c -56.269,0.0,-186.484,0.049,-242.752,-0.03 C 96.875015,388.796,96.875015,388.796,96.875015,388.796 L 96.875015,388.796 M 96.875015,388.796 c -9.129,0.09,-17.017,-8.242,-16.643,-17.322 c -0.05,-46.093,0.029,-92.177,-0.029,-138.261 c -24.737,-0.099,-49.466,0.04,-74.203,-0.068 C 38.852,196.694,72.049,160.539,105.197,124.354 L 105.197,124.354</string>
    <string name="svg_cart">M 153.6,409.6 V 409.6 c -28.287,0.0,-50.943,22.913,-50.943,51.2 H 102.657005 v 0.0 c 0.0,28.288,22.656,51.2,50.943,51.2 s 0.0,0.0,0.0,0.0 v 0.0 h 0.0 v 0.0 c 28.288,0.0,51.2,-22.912,51.2,-51.2 C 204.8,432.513,181.888,409.6,153.6,409.6 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 v 0.0 h 0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 v 0.0 V 409.6 H 153.6 V 409.6 L 153.6,409.6 M 0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 v 51.2 h 51.2 l 92.031,194.175 c 0.0,0.0,0.0,0.0,0.0,0.0 s 0.0,0.0,0.0,0.0 v 0.0 C 143.231,245.375,143.231,245.375,143.231,245.375 L 108.675,308.1 M 108.675,308.1 c -3.969,7.426,-6.274,15.738,-6.274,24.7 v 0.0 c 0.0,28.288,22.912,51.2,51.199,51.2 h 307.2 s 0.0,0.0,0.0,0.0 v -51.2 H 164.481 C 164.481,332.80002,164.481,332.80002,164.481,332.80002 L 164.481,332.80002 M 164.481,332.80002 l 0.0,0.0 c -3.588,0.0,-6.4,-2.812,-6.4,-6.399 c 0.0,-1.15,0.257,-2.176,0.769,-3.075 l 22.913,-41.726 h 190.712 c 19.2,0.0,35.976,-10.625,44.801,-26.368 L 508.8,89.088 c 2.05,-3.582,3.2,-7.807,3.2,-12.288 l 0.0,0.0 c 0.0,-14.206,-11.525,-25.6,-25.6,-25.6 H 107.906 c 0.0,0.0,0.0,0.0,0.0,0.0 l 0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 h 0.0 C 107.906,51.199997,107.906,51.199997,107.906,51.199997 L 83.581,0.0 H 0.0 M 0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 C 0.0,0.0,0.0,0.0,0.0,0.0 L 0.0,0.0 M 409.6,409.6 c -28.287,0.0,-50.949,22.913,-50.949,51.2 c 0.0,28.288,22.662,51.2,50.949,51.2 c 28.288,0.0,51.2,-22.912,51.2,-51.2 C 460.8,432.513,437.888,409.6,409.6,409.6 L 409.6,409.6</string>
    <string name="morph_strategy_base">Morph strategy BASE</string>
    <string name="morph_strategy_linear">Morph strategy LINEAR</string>
    <string name="morph_strategy_sub_base">Morph strategy SUB-BASE</string>
    <string name="morph_strategy_sub_linear">Morph strategy SUB-LINEAR</string>
</resources>